--- a/views/weather.hbs
+++ b/views/weather.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/js/weatherDisplayAPI.js"></script>
     <title>Weather Search</title>
     <link rel="stylesheet" href="public\stylesheets\style.css">
 </head>
